<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_layout"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/setting_wakeup"
        android:textColor="#333"
        android:textSize="20sp" />

    <TimePicker 
        android:id="@+id/wakeup_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#66000000"
        />
	<TextView
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/setting_wakeup_explain"
	    android:textColor="#999999"
	    android:layout_marginLeft="20dp"
	     android:layout_marginRight="20dp"/>
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="33dp" >

        <Button
            android:id="@+id/exitBtn0"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/alert_btn_ok"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/exitBtn1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/alert_btn_cancel"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>