<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!--titlebar_lightgray_bg-->
    <RelativeLayout
        android:id="@+id/relativeLayout_title_and_back"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/shape_title_bg" >

        <Button
            android:id="@+id/button_back"
             android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/play_title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:shadowColor="#ff000000"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="3.0"
            android:text="@string/feedback_title"
            android:textColor="@color/whitesmoke"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <ImageView
            android:id="@+id/qq_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="17dp"
            android:src="@drawable/iv_home_qq"
            android:padding="4dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout_title_and_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/feedback_info_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_info"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/t1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border"
        android:hint="@string/feedback_info"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="14sp"></EditText>
    
     <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_info"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_contact_title"
        android:textColor="@color/black"
        android:textSize="18sp" />
    

    <EditText
        android:id="@+id/editText_Contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:hint="@string/feedback_contact"
        android:textColor="#000000"
        android:padding="10dp"
        android:textSize="14sp" >
    </EditText>

    <!--button_shape-->
    <Button
        android:id="@+id/ImageView_submit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText_Contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_btn_bg"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo_small" />

</RelativeLayout>